# server/lib/ingredients/set.js
@@ -1,0 +1,5 @@
+import {Ingredient} from '../../database-initi.js';
+
+export default async function save(ingredient) {
+  return Ingredient.create(ingredient)
+}
