# server/openapi.yaml
@@ -12,7 +12,7 @@ paths:
     get:
       description: Returns a list of Unit of Measure
       responses:
-        '200':
+        "200":
           description: Successfully returned a list of UOMs
           content:
             application/json:
@@ -20,57 +20,46 @@ paths:
                 type: array
                 items:
                   #  ----- Added line  --------------------------------
-                  $ref: '#/components/schemas/Artist'
+                  $ref: "#/components/schemas/UOM"
                   #  ---- /Added line  --------------------------------
-        '400':
+        "400":
           #  ----- Added line  ----------------------------------------
-          $ref: '#/components/responses/400Error'
+          $ref: "#/components/responses/400Error"
           #  ---- /Added line  ----------------------------------------
 
-  /recipes:
+  /ingredients:
     get:
-      description: Returns a list of recipes
+      description: Returns a list of ingredients
       parameters:
         #  ----- Added line  ------------------------------------------
-        - $ref: '#/components/parameters/MemberId'
+        - $ref: "#/components/parameters/PageLimit"
+        - $ref: "#/components/parameters/PageOffset"
+        - name: keyword
+          in: query
+          description: the keyword which the ingredients name match
+          schema:
+            type: string
+            minLength: 36
         #  ---- /Added line  ------------------------------------------
       responses:
-        '200':
-          description: Successfully returned a list of recipes
+        "200":
+          description: Successfully returned a list of ingredients
           content:
             application/json:
               schema:
                 type: array
                 items:
                   #  ----- Added line  --------------------------------
-                  $ref: '#/components/schemas/Artist'
+                  $ref: "#/components/schemas/Ingredient"
                   #  ---- /Added line  --------------------------------
-        '400':
-          #  ----- Added line  ----------------------------------------
-          $ref: '#/components/responses/400Error'
-          #  ---- /Added line  ----------------------------------------
-
-    post:
-      description: Lets a user post a new artist
-      requestBody:
-        required: true
-        content:
-          application/json:
-            schema:
-              #  ----- Added line  ------------------------------------
-              $ref: "#/components/schemas/Artist"
-              #  ---- /Added line  ------------------------------------
-      responses:
-        "200":
-          description: Successfully created a new artist
         "400":
           #  ----- Added line  ----------------------------------------
           $ref: "#/components/responses/400Error"
           #  ---- /Added line  ----------------------------------------
 
-  /recipes/{id}:
+  /ingredients/{id}:
     get:
-      description: Obtain information about an artist from his or her unique username
+      description: Obtain information about an ingredient for a given id
       parameters:
         - name: id
           in: path
@@ -80,32 +69,97 @@ paths:
 
       responses:
         "200":
-          description: Successfully returned an artist
+          description: Successfully returned an ingredient
           content:
             application/json:
               schema:
-                type: object
-                properties:
-                  artist_name:
-                    type: string
-                  artist_genre:
-                    type: string
-                  albums_recorded:
-                    type: integer
+                $ref: "#/components/schemas/Ingredient"
 
         "400":
           #  ----- Added line  ----------------------------------------
           $ref: "#/components/responses/400Error"
           #  ---- /Added line  ----------------------------------------
-    put:
-      description: Lets a user post a new artist
+
+  /recipes:
+    get:
+      description: Returns a list of recipes
+      parameters:
+        #  ----- Added line  ------------------------------------------
+        - $ref: "#/components/parameters/MemberId"
+        #  ---- /Added line  ------------------------------------------
+      responses:
+        "200":
+          description: Successfully returned a list of recipes
+          content:
+            application/json:
+              schema:
+                type: array
+                items:
+                  #  ----- Added line  --------------------------------
+                  $ref: "#/components/schemas/Recipe"
+                  #  ---- /Added line  --------------------------------
+        "400":
+          #  ----- Added line  ----------------------------------------
+          $ref: "#/components/responses/400Error"
+          #  ---- /Added line  ----------------------------------------
+
+    post:
+      description: Lets a user post a new recipe
       requestBody:
         required: true
         content:
           application/json:
             schema:
               #  ----- Added line  ------------------------------------
-              $ref: "#/components/schemas/Artist"
+              $ref: "#/components/schemas/Recipe"
+              #  ---- /Added line  ------------------------------------
+      responses:
+        "200":
+          description: Successfully created a new recipe
+        "400":
+          #  ----- Added line  ----------------------------------------
+          $ref: "#/components/responses/400Error"
+          #  ---- /Added line  ----------------------------------------
+
+  /recipes/{id}:
+    get:
+      description: Obtain information about a recipe for a given id
+      parameters:
+        - name: id
+          in: path
+          required: true
+          schema:
+            type: string
+
+      responses:
+        "200":
+          description: Successfully returned a recipe
+          content:
+            application/json:
+              schema:
+                #  ----- Added line  ------------------------------------
+                $ref: "#/components/schemas/Recipe"
+              #  ----- Added line  ------------------------------------
+        "400":
+          #  ----- Added line  ----------------------------------------
+          $ref: "#/components/responses/400Error"
+          #  ---- /Added line  ----------------------------------------
+
+    put:
+      description: Lets a user update a recipe for a given id
+      parameters:
+        - name: id
+          in: path
+          required: true
+          schema:
+            type: string
+      requestBody:
+        required: true
+        content:
+          application/json:
+            schema:
+              #  ----- Added line  ------------------------------------
+              $ref: "#/components/schemas/Recipe"
               #  ---- /Added line  ------------------------------------
       responses:
         "200":
@@ -114,30 +168,96 @@ paths:
           #  ----- Added line  ----------------------------------------
           $ref: "#/components/responses/400Error"
           #  ---- /Added line  ----------------------------------------
-  
-  
 
 components:
   securitySchemes:
-    bearerAuth:            # arbitrary name for the security scheme
+    bearerAuth: # arbitrary name for the security scheme
       type: http
       scheme: bearer
-      bearerFormat: JWT    # optional, arbitrary value for documentation purposes
+      bearerFormat: JWT # optional, arbitrary value for documentation purposes
 
   schemas:
-    Artist:
+    Recipe:
       type: object
       required:
-        - username
+        - title
+        - memberId
+        - method
       properties:
-        artist_name:
+        title:
           type: string
-        artist_genre:
+        memberId:
           type: string
-        albums_recorded:
-          type: integer
-        username:
+        method:
           type: string
+          minLength: 1
+          maxLength: 2048
+        calories:
+          type: number
+        fats:
+          type: number
+        protein:
+          type: number
+        cabs:
+          type: number
+        sodium:
+          type: number
+        ingredient:
+          type: array
+          items:
+            $ref: "#/components/schemas/Ingredient"
+        images:
+          type: array
+          items:
+            $ref: "#/components/schemas/Image"
+
+    Image:
+      type: object
+      required:
+        - title
+        - url
+      properties:
+        title:
+          type: string
+        url:
+          type: string
+
+    UOM:
+      type: object
+      required:
+        - abbreviation
+        - description
+      properties:
+        abbreviation:
+          type: string
+        description:
+          type: string
+
+    Ingredient:
+      type: object
+      required:
+        - amount
+        - name
+        - uom
+      properties:
+        name:
+          type: string
+        [type]:
+          type: string
+        uom:
+          type: string
+        amount:
+          type: number
+        calories:
+          type: number
+        fats:
+          type: number
+        protein:
+          type: number
+        cabs:
+          type: number
+        sodium:
+          type: number
 
   #  ----- Added lines  ----------------------------------------
   parameters:
@@ -152,7 +272,14 @@ components:
     PageOffset:
       name: offset
       in: query
-      description: Specifies the page number of the recipes to be displayed
+      description: Specifies the page number of the item to be displayed
+      schema:
+        type: integer
+
+    PageLimit:
+      name: limit
+      in: query
+      description: Specifies the number of the item to be displayed per page
       schema:
         type: integer
 
