# server/routes/v1/recipes/index.js
@@ -6,6 +6,7 @@ const router = new express.Router();
 router.post('/', save);
 router.get('/ingredients/uom', getUOM);
 router.get('/:recipeId', getById);
+router.put('/:recipeId', getById);
 router.get('/', get);
 
 export default router;
